<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/input_padding"
        android:textSize="@dimen/input_text_size"/>

    <TextView
        android:id="@+id/number1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/number2"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintBottom_toTopOf="@+id/number4"
        android:gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/number1"
        android:textSize="@dimen/button_text_size"/>

    <TextView
        android:id="@+id/number2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@+id/number1"
        app:layout_constraintRight_toLeftOf="@id/number3"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintBottom_toTopOf="@id/number5"
        android:gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/number2"
        android:textSize="@dimen/button_text_size"/>

    <TextView
        android:id="@+id/number3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/number2"
        app:layout_constraintRight_toLeftOf="@id/plus_button"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintBottom_toTopOf="@id/number6"
        android:gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/number3"
        android:textSize="@dimen/button_text_size"/>

    <TextView
        android:id="@+id/number4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/number5"
        app:layout_constraintTop_toBottomOf="@+id/number1"
        app:layout_constraintBottom_toTopOf="@+id/number7"
        android:gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/number4"
        android:textSize="@dimen/button_text_size"/>

    <TextView
        android:id="@+id/number5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/number4"
        app:layout_constraintRight_toLeftOf="@id/number6"
        app:layout_constraintTop_toBottomOf="@id/number2"
        app:layout_constraintBottom_toTopOf="@id/number8"
        android:gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/number5"
        android:textSize="@dimen/button_text_size"/>

    <TextView
        android:id="@+id/number6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/number5"
        app:layout_constraintRight_toLeftOf="@id/minus_button"
        app:layout_constraintTop_toBottomOf="@id/number3"
        app:layout_constraintBottom_toTopOf="@id/number9"
        android:gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/number6"
        android:textSize="@dimen/button_text_size"/>

    <TextView
        android:id="@+id/number7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/number8"
        app:layout_constraintTop_toBottomOf="@+id/number4"
        app:layout_constraintBottom_toTopOf="@id/eq_button"
        android:gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/number7"
        android:textSize="@dimen/button_text_size"/>

    <TextView
        android:id="@+id/number8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/number7"
        app:layout_constraintRight_toLeftOf="@id/number9"
        app:layout_constraintTop_toBottomOf="@id/number6"
        app:layout_constraintBottom_toTopOf="@id/number0"
        android:gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/number8"
        android:textSize="@dimen/button_text_size"/>

    <TextView
        android:id="@+id/number9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/number8"
        app:layout_constraintRight_toLeftOf="@id/multiply_button"
        app:layout_constraintTop_toBottomOf="@id/number6"
        app:layout_constraintBottom_toTopOf="@+id/divide_button"
        android:gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/number9"
        android:textSize="@dimen/button_text_size"/>

    <TextView
        android:id="@+id/number0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/number7"
        app:layout_constraintLeft_toRightOf="@id/eq_button"
        app:layout_constraintRight_toLeftOf="@id/divide_button"
        app:layout_constraintTop_toBottomOf="@id/number8"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/number0"
        android:textSize="@dimen/button_text_size"/>

    <TextView
        android:id="@+id/backspace_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@+id/number3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintBottom_toTopOf="@id/plus_button"
        android:gravity="center"
        android:background="@drawable/button_background_other_action"
        android:text="@string/backspace_button"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/white_color"/>

    <TextView
        android:id="@+id/eq_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/number7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/number0"
        android:gravity="center"
        android:background="@drawable/button_background_other_action"
        android:text="@string/eq_button"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/white_color"/>

    <TextView
        android:id="@+id/plus_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/number6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backspace_button"
        app:layout_constraintBottom_toTopOf="@+id/minus_button"
        android:gravity="center"
        android:background="@drawable/button_background_action"
        android:text="@string/plus_button"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/white_color"/>

    <TextView
        android:id="@+id/minus_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/number9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plus_button"
        app:layout_constraintBottom_toTopOf="@id/multiply_button"
        android:gravity="center"
        android:background="@drawable/button_background_action"
        android:text="@string/minus_button"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/white_color"/>

    <TextView
        android:id="@+id/multiply_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/divide_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minus_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:background="@drawable/button_background_action"
        android:text="@string/multiply_button"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/white_color"/>

    <TextView
        android:id="@+id/divide_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/number0"
        app:layout_constraintRight_toRightOf="@id/multiply_button"
        app:layout_constraintTop_toBottomOf="@id/number9"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:background="@drawable/button_background_action"
        android:text="@string/divide_button"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/white_color"/>

</android.support.constraint.ConstraintLayout>